2011-02-04  Louis-Noel Pouchet  <pouchet@cse.ohio-state.edu>

	* config/stable/configure.cfg,
	* config/stable/driver.cfg,
	* config/local/configure.cfg,
	* config/local/driver.cfg: Update the configuration files to
	support Candl/ISL and the latest version revision of Candl, CLooG
	and ISL.

2011-02-04  Louis-Noel Pouchet  <pouchet@cse.ohio-state.edu>

	* configure.ac: Bump to pocc-1.0-rc3.

2011-02-04  Louis-Noel Pouchet  <pouchet@cse.ohio-state.edu>

	* tests/tests/gemver/gemver.plutotileparunrollprev.c,
	* tests/tests/gemver/gemver.plutotileparunroll.c,
	* tests/tests/gemver/gemver.plutotile.c,
	* tests/tests/gemver/gemver.plutotilepar.c,
	* tests/tests/gemver/gemver.passthru.c,
	* tests/tests/dgemm/dgemm.passthru.c,
	* tests/tests/dgemm/dgemm.plutotileparunrollprev.c,
	* tests/tests/dgemm/dgemm.plutotileparunroll.c,
	* tests/tests/dgemm/dgemm.plutotile.c,
	* tests/tests/dgemm/dgemm.plutotilepar.c: Update the test suite to
	reflect the new CLooG output.

2011-02-04  Louis-Noel Pouchet  <pouchet@cse.ohio-state.edu>

	* config/stable/configure.cfg,
	* config/stable/driver.cfg: Update the configuration files to
	support ISL and the latest version of Candl.

2011-02-01  Louis-Noel Pouchet  <pouchet@cse.ohio-state.edu>
	This patch adds systematic compilation of ISL to all modes
	of PoCC, and the option --candl-dep-isl-simp.
	Candl is now compiled with ISL support by default.

	* driver/pocc/include/pocc/options.h,
	* driver/pocc/driver-candl.c,
	* driver/pocc/options.c,
	* driver/src/options.h,
	* driver/src/options.c: Create option --candl-dep-isl-simp
	to simplify dependence polyhedra using ISL.

	* driver/pocc/Makefile.am: Systematically link with ISL.

	* config/devel/configure.cfg,
	* config/devel/driver.cfg,
	* config/base/configure.cfg,
	* config/base/driver.cfg: Update the modes to support ISL and the
	latest changes in Candl.

	* bin/pocc-checkout: Update to support specific revisions in git.

	* bin/create_ld_lib_path.sh: New. Convenience script to create