@@ -142,10 +142,10 @@ retrieve-method: wget
 configure: --with-candl=$poccsrcdir/analyzers/install-candl --with-fm=$poccsrcdir/math/install-fm --with-piplib=$poccsrcdir/math/install-piplib --with-pocc-utils=$poccsrcdir/driver/install-pocc --with-scoplib=$poccsrcdir/ir/install-scoplib
 make-depends: candl fm piplib scoplib
 
-[pluto-0.5.1-pace]
+[pluto-0.5.2-pace]
 category: optimizers
 module: pluto
-location: http://www-rocq.inria.fr/~pouchet/software/pocc/download/modules/pluto-0.5.0-pocc.tar.gz
+location: http://www-rocq.inria.fr/~pouchet/software/pocc/download/modules/pluto-0.5.2-pace.tar.gz
 retrieve-method: wget
 configure: --with-candl=$poccsrcdir/analyzers/install-candl --with-scoplib=$poccsrcdir/ir/install-scoplib --with-clan=$poccsrcdir/analyzers/install-clan --with-piplib=$poccsrcdir/math/install-piplib --with-pocc-utils=$poccsrcdir/driver/install-pocc --with-cloog=$poccsrcdir/generators/install-cloog --with-polylib=$poccsrcdir/math/install-polylib --with-gmp-prefix=$poccsrcdir/math/external/install
 make-depends: clan candl piplib cloog polylib scoplib
