@@ -14,7 +14,7 @@
 configuration: stable
 # Specify the software to use. Software name must match an entry in
 # configure.cfg.
-software-versions: fm-0.5.0 piplib-1.3.6-patched clan-0.6.0 candl-0.5.0 letsee-0.2.0-pre polylib-5.22.1 cloog-0.16.1 pluto-0.5.1-pace scoplib-0.2.0 polyfeat-0.1.0 pragmatize-0.1.0 vectorizer-0.1.0 scoptools-0.1.0 clasttools-0.1.0 storcompacter-0.1.0 clastannotation-0.1.0 dlml-0.1.0 piplib-gmp-1.3.6-mp isl-0.05.1
+software-versions: fm-0.5.0 piplib-1.3.6-patched clan-0.6.0 candl-0.5.0 letsee-0.2.0-pre polylib-5.22.1 cloog-0.16.1 pluto-0.5.2-pace scoplib-0.2.0 polyfeat-0.1.0 pragmatize-0.1.0 vectorizer-0.1.0 scoptools-0.1.0 clasttools-0.1.0 storcompacter-0.1.0 clastannotation-0.1.0 dlml-0.1.0 piplib-gmp-1.3.6-mp isl-0.05.1
 
 # The rest of the file is not used for the moment.
 pass-thru: clan candl cloog
