@@ -6,9 +6,9 @@
 @setfilename pocc.info
 @settitle PoCC - The Polyhedral Compiler Collection package
 
-@set EDITION 0.2
-@set VERSION 1.0-rc1
-@set UPDATED November 13th 2009
+@set EDITION 0.3
+@set VERSION 1.0-rc3
+@set UPDATED February 8th 2011
 @setchapternewpage odd
 
 
@@ -20,7 +20,7 @@
 This manual is dedicated to PoCC version @value{VERSION}, a flexible
 source-to-source compiler in the polyhedral model.
 
-Copyright @copyright{} 2009 Louis-No@"el Pouchet.
+Copyright @copyright{} 2009-2011 Louis-No@"el Pouchet.
 
 @c quotation
 Permission is granted to copy, distribute and/or modify this document under
@@ -121,6 +121,7 @@ authors diserve most of the credit.
 @item Clan and Candl have been developped by C@'edric Bastoul and Louis-No@"el Pouchet
 @item PLuTo has been developped by Uday Bondhugula
 @item LetSee has been developped by Louis-No@"el Pouchet
+@item ISL has been developped by Sven Verdoolaege
 @item PIPLib has been developped by Paul Feautrier and C@'edric Bastoul
 @item PolyLib has been developped mainly by Doran Wilde, Bart Kienhuis, Vincent Loechner, Tanguy Risset and Sven Verdoolaege
 @item FM has been developped by Louis-No@"el Pouchet
@@ -288,6 +289,7 @@ PoCC leverages several GNU tools for polyhedral compilation. Namely:
 @item LetSee, the Legal transformation Space explorator, for iterative compilation using affine multidimensional schedules
 @item PLuTo, an automatic parallelizer and locality optimizer for multicores, for powerful optimization with tiling and parallelism in the polyhedral model
 @item CLooG, the Chunky Loop Generator, to generate syntactic code from the polyhedral representation
+@item ISL, the Integer Set Library
 @item PIPLib, the Parametric Integer Programming Library
 @item PolyLib, the Polyhedral Library
 @item FM, the Fourier-Motzkin library
@@ -300,14 +302,45 @@ These are the available options for PoCC.
 
 @subsection General Options
 @itemize
+
+-h	--help 			Print this help
+-v	--version 		Print version information
+-o	--output <arg> 		Output file [filename.pocc.c]
+  	--bounded-ctxt 		Parser: bound all global parameters >= -1
+  	--default-ctxt 		Parser: bound all global parameters >= 32
+  	--inscop-fakearray 	Parser: use FAKEARRAY[i] to explicitly declare
+				write dependences
+				as input
+
+  	--no-candl 		Dependence analysis: don't run candl [off]
+  	--candl-dep-isl-simp 	Dependence analysis: simplify with ISL [off]
+
+
+@item @code{--bounded-ctxt} Parser: bound all global parameters >= -1 [off]
+
+
+
 @item @code{-h}, @code{--help} Print this help
 @item @code{-v}, @code{--version} Print version information
 @item @code{-o}, @code{--output <arg>} Output file [filename.pocc.c]
-@item @code{--bounded-ctxt} Parser: bound all global parameters >= -1 [off]
 @item @code{-d}, @code{--delete-files} Delete files previously generated by PoCC [off]
 @item @code{--verbose} Verbose output [off]
 @item @code{--quiet} Minimal output [off]
 @end itemize
+
+@subsection ScopLib Input/Output Options
+
+@item @code{--read-scop}	Parser: read SCoP file instead of C file
+@item @code{--output-scop} 	Output scoplib file to filename.pocc.scop
+@item @code{--cloogify-scheds} 	Create CLooG-compatible schedules in the scop. When invoked in conjunction of --ouput-scop, the schedules in the generated scop can be directly given as an input to CLooG.
+
+@subsection Dependence Analysis
+
+
+@item @code{--no-candl}		Dependence analysis: don't run candl [off]
+@item @code{--pluto-ext-candl} 	PLuTo: Read dependences from SCoP [off]
+@item @code{--candl-dep-isl-simp} Dependence analysis: simplify dependence polyhedra with ISL [off]
+
 
 @subsection Code Generation Options
 
@@ -374,6 +407,9 @@ About PLuTo:
 @item @code{--pluto-quiet} be quiet [off]
 @item @code{--pluto-ft} ft [off]
 @item @code{--pluto-lt} lt [off]
+@item @code{--pluto-tile-scat} 	PLuTo: Embed tiling inside scatterings [off]
+
+
 @end itemize
 
 @*
