@@ -77,6 +77,25 @@ pocc_SOURCES		=			\
 
 pocc_CFLAGS		= -DPOCC_ROOT_DIR=$(abs_top_srcdir)
 
-pocc_LDADD		= $(top_builddir)/driver/pocc/libpocc.la
+pocc_LDADD		=
+  $(install_prefix)/driver/install-pocc/lib/libpocc.la			     \
+  $(install_prefix)/ir/install-scoplib/lib/libscoplib.la		     \
+  $(install_prefix)/ir/install-scoptools/lib/libscoptools.la		     \
+  $(install_prefix)/analyzers/install-clan/lib/libclan.la		     \
+  $(install_prefix)/analyzers/install-candl/lib/libcandl.la		     \
+  $(install_prefix)/analyzers/install-polyfeat/lib/libpolyfeat.la	     \
+  $(install_prefix)/math/install-isl/lib/libisl.la			     \
+  $(install_prefix)/math/install-piplib/lib/libpiplib64.la		     \
+  $(install_prefix)/math/install-polylib/lib/libpolylib64.la		     \
+  $(install_prefix)/optimizers/install-letsee/lib/libletsee.la		     \
+  $(install_prefix)/optimizers/install-pluto/lib/libpluto.la		     \
+  $(install_prefix)/optimizers/install-storcompacter/lib/libstorcompacter.la \
+  $(install_prefix)/optimizers/install-vectorizer/lib/libvectorizer.la	     \
+  $(install_prefix)/generators/install-cloog/lib/libcloog-isl.la	     \
+  $(install_prefix)/generators/install-pragmatize/lib/libpragmatize.la	     \
+  $(install_prefix)/generators/install-clasttools/lib/libclasttools.la	     \
+  $(install_prefix)/generators/install-clastannotation/lib/libclastannotation.la  \
+  $(install_prefix)/math/install-fm/lib/libfm.la
+
 
 #############################################################################
